fix footer z-index (#285)

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -75,3 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 .page-pageview-info {
   display: none !important;
 }
+
+footer {
+  z-index: 999;
+}
